Css to prevent video panel from being too tall at various screen sizes

--- a/index.css
+++ b/index.css
@@ -159,8 +159,14 @@ section {
         #video-panel-end-parent {
             position: relative;
             width: 100%;
-            height: 70vh;
             margin: 10vh auto 10vh auto;
+            border: 1px solid green;
+            aspect-ratio: 16/9;
+
+            @media (min-aspect-ratio: 3/2) {
+                height: 70vh;
+                aspect-ratio: unset;
+            }
 
             #video-panel-end {
                 position: absolute;
